MB-34173: 1/2 Persist a valid snapshot range during backfill

If a backfill was very large and the backfill queue had grown to
be > flusher_batch_split_trigger before the flusher visits the vb,
the code path taken results in an unitialised snapshot_range_t being
persisted.

To address this we ensure the range is correctly initialised in
the path where the backfill queue is > flusher_batch_split_trigger

Change-Id: Idcdbe9fa9c7f3807d08372e3ebf24c106a449d9f
Reviewed-on: http://review.couchbase.org/109269
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>