engines/ep/src/checkpoint.cc
@@ -1272,16 +1272,15 @@ CheckpointManager::ItemsForCursor CheckpointManager::getItemsForCursor(
             "manager on vb:%" PRIu16,
             name.c_str(),
             vbucketId);
-        return {};
+        return {0, 0};
     }
 
     auto& cursor = it->second;
 
     // Fetch whole checkpoints; as long as we don't exceed the approx item
     // limit.
-    ItemsForCursor result;
-    result.range.start = (*cursor.currentCheckpoint)->getSnapshotStartSeqno();
-    result.range.end = (*cursor.currentCheckpoint)->getSnapshotEndSeqno();
+    ItemsForCursor result((*cursor.currentCheckpoint)->getSnapshotStartSeqno(),
+                          (*cursor.currentCheckpoint)->getSnapshotEndSeqno());
     size_t itemCount = 0;
     while ((result.moreAvailable = incrCursor(cursor))) {
         queued_item& qi = *(cursor.currentPos);
@@ -1627,10 +1626,9 @@ snapshot_info_t CheckpointManager::getSnapshotInfo() {
                         "checkpointList is empty");
     }
 
-    snapshot_info_t info;
-    info.range.start = checkpointList.back()->getSnapshotStartSeqno();
-    info.start = lastBySeqno;
-    info.range.end = checkpointList.back()->getSnapshotEndSeqno();
+    snapshot_info_t info(lastBySeqno,
+                         {checkpointList.back()->getSnapshotStartSeqno(),
+                          checkpointList.back()->getSnapshotEndSeqno()});
 
     // If there are no items in the open checkpoint then we need to resume by
     // using that sequence numbers of the last closed snapshot. The exception is
